--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,11 @@
   <div>
     Microblog: 
     <a href="{{ url_for('index') }}">Home</a>
-    <a href="{{ url_for('login') }}">Login</a>
+    {% if current_user.is_anonymous %}
+      <a href="{{ url_for('login') }}">Login</a>
+    {% else %}
+      <a href="{{ url_for('logout') }}">Logout</a>
+    {% endif %}
   </div>
   <hr>
   {% with messages = get_flashed_messages() %}
@@ -24,6 +28,7 @@
       </ul>
     {% endif %}
   {% endwith %}
-  {% block content %}{% endblock %}
+  {% block content %}
+  {% endblock %}
 </body>
 </html>
